# omnichat89

./: .gitattributes  .gitignore  LICENSE  README.md  README.ru.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/chat/: auth.rs  badges.rs  kick.rs  message.rs  mod.rs  twitch.rs
src-tauri/src/overlay/: mod.rs  page.html
src-tauri/src/tts/: edge.rs  mod.rs  player.rs  settings.rs
src/lib/: i18n.ts  types.ts
src/lib/assets/: kick-badges.ts
src/lib/components/: ChatMessage.svelte  ChatView.svelte  ContextMenu.svelte  SettingsWindow.svelte  TitleBar.svelte
src/lib/stores/: auth.ts  chat.ts  settings.ts  tts.ts
src/styles/: global.css
